--- a/style.css
+++ b/style.css
@@ -7,22 +7,13 @@ body{
   background-color: #55bcc9;
 }
 
-.main_img{
-  z-index: 10;
-  position: absolute;
-  top: 200px;
-  left: 200px;
-}
-
-/* ---- particles.js container ---- */
-
 #particles-js {
   width: 100%;
   height: 100%;
   margin: 0;
 }
 
-.header{
+header{
   margin: 0;
   background-color: #FB5D51;
   position: fixed;
@@ -34,6 +25,22 @@ body{
   align-items: center;
   justify-content: space-between;
   z-index: 9;
+}
+
+#language_btn{
+  padding: 10px;
+  border: 3px solid #fff;
+  border-radius: 20px;
+  color: #fff;
+  font-size: 26px;
+  font-family: 'Mada', sans-serif;
+  margin-left: 20px;
+  cursor: pointer;
+  transition-duration: .2s;
+}
+
+#language_btn:hover{
+  transform: scale(1.1);
 }
 
 nav{
@@ -76,42 +83,13 @@ nav a:last-child{
   transition-duration: .5s;
 }
 
-h1{
-  font-size: 44px;
-  font-family: 'Mada', sans-serif;
-  color: #fff;
-  width: 100%;
-}
-
-h2{
-  font-size: 38px;
-  font-family: 'Mada', sans-serif;
-  color: #fff;
-}
-
-.main_section{
+.main{
   display: flex;
   justify-content: space-around;
   position: absolute;
   top: 160px;
   margin: auto;
   width: 100vw;
-}
-
-.main_text_container{
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 0px 100px;
-}
-
-.main_text{
-  color: #fff;
-  font-size: 26px;
-  line-height: 40px;
-  font-family: 'Mada', sans-serif;
 }
 
 .background_rectangle{
@@ -127,32 +105,38 @@ h2{
   padding: 0px 0px 80px 0px;
 }
 
-.background_rectangle_project{
-  background: linear-gradient(to bottom right, grey, #fff);
-  opacity: .2;
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  padding: 0px 0px 80px 0px;
-}
-
-#language_btn{
-  padding: 10px;
-  border: 3px solid #fff;
-  border-radius: 20px;
-  color: #fff;
-  font-size: 26px;
-  font-family: 'Mada', sans-serif;
-  margin-left: 20px;
-}
-
 #main_img{
   width: 36%;
   margin-left: 100px;
+}
+
+.main_text_container{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0px 100px;
+}
+
+h1{
+  font-size: 44px;
+  font-family: 'Mada', sans-serif;
+  color: #fff;
+  width: 100%;
+}
+
+h2{
+  font-size: 38px;
+  font-family: 'Mada', sans-serif;
+  color: #fff;
+}
+
+.main_text{
+  color: #fff;
+  font-size: 22px;
+  line-height: 40px;
+  font-family: 'Mada', sans-serif;
 }
 
 #link_contacts{
@@ -171,11 +155,11 @@ h2{
   cursor: pointer;
 }
 
-.skills_section, .projects_section{
+.skills, .projects{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 60px 40px 80px 40px;
+  margin: 60px 40px;
 }
 
 .tool_wrapper, .project_wrapper{
@@ -194,7 +178,6 @@ h2{
   margin: 50px 80px;
 }
 
-
 .tool_container_text{
   color: #fff;
   font-size: 26px;
@@ -208,6 +191,19 @@ h2{
   padding: 10px;
   margin-bottom: 120px;
   position: relative;
+}
+
+.background_rectangle_project{
+  background: linear-gradient(to bottom right, grey, #fff);
+  opacity: .2;
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  padding: 0px 0px 80px 0px;
 }
 
 .project_mockup{
@@ -259,4 +255,81 @@ h2{
   top: 70px;
   left: 200px;
   width: 250px;
+}
+
+.contacts{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contacts_text{
+  color: #fff;
+  font-family: 'Mada', sans-serif;
+  font-size: 22px;
+  margin-bottom: 50px;
+}
+
+.contacts_form{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding: 50px 100px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(to bottom right, rgba(128, 128, 128, 0.1), rgba(255, 255, 255, 0.1));
+  box-sizing: border-box;
+  color: #fff;
+  font-family: 'Mada', sans-serif;
+  font-size: 22px;
+  margin-bottom: 90px;
+}
+
+.input_field{
+  padding: 10px;
+  margin: 10px 0;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.2);
+  border: none;
+  border-radius: 20px;
+  width: 100%;
+  font-family: 'Mada', sans-serif;
+  font-size: 22px;
+}
+
+.input_field_text{
+  height: 200px;
+}
+
+#btn_submit{
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  background-color: #FB5D51;
+  color: #fff;
+  font-size: 26px;
+  font-family: 'Mada', sans-serif;
+  margin-left: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition-duration: .2s;
+}
+
+#btn_submit:hover{
+  transform: scale(1.1);
+}
+
+#copyright{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: #fff;
+  font-size: 20px;
+  font-family: 'Mada', sans-serif;
+  align-self: flex-start;
+  margin-left: 30px;
+  margin-bottom: 50px;
+}
+
+#copyright p{
+  margin: 0;
 }
