--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body{
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body{
@@ -28,19 +29,42 @@ header{
 }
 
 #language_btn{
-  padding: 10px;
   border: 3px solid #fff;
   border-radius: 20px;
-  color: #fff;
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
   margin-left: 20px;
   cursor: pointer;
-  transition-duration: .2s;
 }
 
-#language_btn:hover{
-  transform: scale(1.1);
+.main_menu_hamburger, .main_menu_nav{
+  display: none;
+}
+
+.main_menu_nav{
+  background-color: grey;
+  padding: 120px;
+  position: fixed;
+	top: 0;
+	right: 0;
+  height: 100%;
+  transform: translateX(100%);
+	transition: transform .5s; 
+}
+
+.main_menu_nav.active {
+	transform: translateX(0);
+}
+
+.main_menu_hamburger.active span:nth-of-type(1) {
+  display: none;
+}
+.main_menu_hamburger.active span:nth-of-type(2) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(45deg);  
+}
+.main_menu_hamburger.active span:nth-of-type(3) {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(-45deg); 
 }
 
 nav{
@@ -53,11 +77,10 @@ a{
   color: #fff;
 }
 
-nav a{
+nav a, .main_menu_nav a{
   margin: 10px 20px;
-  color: #fff;
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 nav a:last-child{
@@ -93,10 +116,7 @@ nav a:last-child{
   width: 100vw;
 }
 
-.background_rectangle{
-  background-color: grey;
-  opacity: 0.5;
-  border-radius: 20px;
+.background_rectangle, .background_rectangle_project{
   position: absolute;
   left: 0;
   top: 0;
@@ -104,6 +124,18 @@ nav a:last-child{
   width: 100%;
   z-index: -1;
   padding: 0px 0px 80px 0px;
+}
+
+.background_rectangle{
+  background-color: grey;
+  opacity: 0.5;
+  border-radius: 20px;
+}
+
+.background_rectangle_project{
+  background: linear-gradient(to bottom right, grey, #fff);
+  opacity: .2;
+  border-radius: 10px;
 }
 
 #main_img{
@@ -120,30 +152,29 @@ nav a:last-child{
   padding: 0px 100px;
 }
 
+h1, h2, .main_text, .tool_container_text, .project_container_text, .contacts_text, #copyright{
+  font-family: 'Nunito', sans-serif;
+  color: #fff;
+}
+
 h1{
   font-size: 44px;
-  font-family: 'Mada', sans-serif;
-  color: #fff;
   width: 100%;
 }
 
 h2{
   font-size: 38px;
-  font-family: 'Mada', sans-serif;
-  color: #fff;
 }
 
 .main_text{
-  color: #fff;
   font-size: 22px;
   line-height: 40px;
-  font-family: 'Mada', sans-serif;
 }
 
 #link_contacts{
   color: #013D61;
   font-size: 30px;
-  font-family: 'Mada', sans-serif;
+  font-family: 'Nunito', sans-serif;
   text-decoration-line: underline;
   text-decoration-color: #FB5D51;
   text-decoration-thickness: 10px;
@@ -156,9 +187,12 @@ h2{
   cursor: pointer;
 }
 
-.skills, .projects{
+.skills, .projects, .contacts{
   display: flex;
   flex-direction: column;
+}
+
+.skills, .projects{
   align-items: flex-start;
   margin: 60px 40px;
 }
@@ -169,7 +203,7 @@ h2{
   justify-content: space-around;
   color: #fff;
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .tool_container{
@@ -180,9 +214,7 @@ h2{
 }
 
 .tool_container_text{
-  color: #fff;
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
   text-align: center;
 }
 
@@ -194,19 +226,6 @@ h2{
   position: relative;
 }
 
-.background_rectangle_project{
-  background: linear-gradient(to bottom right, grey, #fff);
-  opacity: .2;
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  padding: 0px 0px 80px 0px;
-}
-
 .project_mockup{
   width: 50%;
   display: flex;
@@ -214,8 +233,6 @@ h2{
 }
 
 .project_container_text{
-  color: #fff;
-  font-family: 'Mada', sans-serif;
   width: 45%;
   display: flex;
   flex-direction: column;
@@ -236,19 +253,30 @@ h2{
   position: relative;
 }
 
-.github_btn, .netlify_btn{
+.btn{
   padding: 10px;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  transition-duration: .2s;
+}
+
+.github_btn, .netlify_btn, .rus_github_btn, .rus_netlify_btn{
   border: 3px solid #fff;
   border-radius: 20px;
-  color: #fff;
+}
+
+.github_btn, .netlify_btn{
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
   margin: 20px;
 }
 
-.github_btn a, .netlify_btn a{
-  text-decoration: none;
-  color: #fff;
+.rus_github_btn, .rus_netlify_btn{
+  font-size: 22px;
+  margin: 18px;
+}
+
+#language_btn:hover, .github_btn:hover, .netlify_btn:hover, .rus_github_btn:hover, .rus_netlify_btn:hover, #btn_submit:hover{
+  transform:scale(1.1);
 }
 
 .netlify_arrow{
@@ -259,14 +287,10 @@ h2{
 }
 
 .contacts{
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
 .contacts_text{
-  color: #fff;
-  font-family: 'Mada', sans-serif;
   font-size: 22px;
   margin-bottom: 50px;
 }
@@ -281,7 +305,7 @@ h2{
   background: linear-gradient(to bottom right, rgba(128, 128, 128, 0.1), rgba(255, 255, 255, 0.1));
   box-sizing: border-box;
   color: #fff;
-  font-family: 'Mada', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 22px;
   margin-bottom: 90px;
 }
@@ -293,7 +317,7 @@ h2{
   border: none;
   border-radius: 20px;
   width: 100%;
-  font-family: 'Mada', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 22px;
 }
 
@@ -302,30 +326,20 @@ h2{
 }
 
 #btn_submit{
-  padding: 10px;
   border: none;
   border-radius: 20px;
   background-color: #FB5D51;
-  color: #fff;
   font-size: 26px;
-  font-family: 'Mada', sans-serif;
   margin-left: 20px;
   margin-top: 20px;
   cursor: pointer;
-  transition-duration: .2s;
-}
-
-#btn_submit:hover{
-  transform: scale(1.1);
 }
 
 #copyright{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  color: #fff;
   font-size: 20px;
-  font-family: 'Mada', sans-serif;
   align-self: flex-start;
   margin-left: 30px;
   margin-bottom: 50px;
@@ -333,4 +347,444 @@ h2{
 
 #copyright p{
   margin: 0;
+}
+
+@media all and (max-width: 1400px){
+  .skills{
+    margin: 120px 40px 60px 40px;
+  }
+}
+
+@media all and (max-width: 1372px){
+  .tool_container{
+    margin: 50px 60px;
+  }
+}
+
+@media all and (max-width: 1290px){
+  .skills{
+    margin: 180px 40px 60px 40px;
+  }
+
+  .rus_github_btn, .rus_netlify_btn{
+    font-size: 20px;
+  }
+}
+
+@media all and (max-width: 1260px){
+  .github_btn, .netlify_btn{
+    font-size: 22px;
+    margin: 16px;
+  }
+
+}
+
+@media all and (max-width: 1240px){
+  .skills{
+    margin: 200px 40px 60px 40px;
+  }
+
+  h2{
+    font-size: 34px;
+  }
+
+  .tool_container_text{
+    font-size: 22px;
+  }
+
+}
+
+@media all and (max-width: 1225px){
+  .skills{
+    margin: 290px 40px 60px 40px;
+  }
+}
+
+@media all and (max-width: 1205px){
+
+  #main_img{
+    width: 30%;
+    margin-left: 80px;
+  }
+
+  h1{
+    font-size: 40px;
+  }
+
+  .contacts_form{
+    width: 70%
+  }
+
+}
+
+@media all and (max-width: 1100px){
+  .links{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .github_btn, .netlify_btn{
+    font-size: 26px;
+    margin: 20px;
+  }
+
+  .github_btn, .netlify_btn, .rus_github_btn, .rus_netlify_btn{
+    margin-left: 0;
+  }
+
+  .netlify_arrow{
+    top: 170px;
+    left: 0;
+  }
+
+  #main_img{
+    width: 28%;
+  }
+
+  h1{
+    font-size: 34px;
+  }
+
+  nav a{
+    font-size: 22px;
+  }
+
+  .main_text_container{
+    padding: 0 50px 0 80px;
+  }
+
+  #link_contacts{
+    font-size: 24px;
+  }
+
+  h2{
+    font-size: 32px;
+  }
+
+}
+
+@media all and (max-width: 1024px){
+  .project_container{
+    flex-direction: column;
+    padding-top: 100px;
+  }
+
+  .project_container_text{
+    align-items: center;
+    width: 100%;
+  }
+
+
+  .project_text_description{
+    padding: 0 30px;
+  }
+
+  .project_mockup{
+    width: 70%;
+  }
+
+  .links{
+    flex-direction: row;
+  }
+
+  .netlify_arrow{
+    top: 70px;
+    left: 170px;
+  }
+  
+  .contacts_form{
+    width: 80%;
+  }
+}
+
+@media all and (max-width: 1000px){
+  .main{
+    flex-direction: column;
+  }
+
+  #main_img{
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 40%;
+  }
+
+  .skills{
+    margin: 590px 40px 60px 40px;
+  }
+
+}
+
+@media all and (max-width: 852px){
+  .main_text_container{
+    width: 80%;
+  }
+
+  .project_container{
+    padding-top: 40px;
+  }
+}
+
+@media all and (max-width: 820px){
+  nav{
+    display: none;
+  }
+
+  .main_menu_hamburger{
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
+    margin-right: 30px;
+  }
+
+  .main_menu_hamburger span {
+    width: 50px;
+    height: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    transition: all 0.5s;
+  }
+
+  .main_menu_hamburger span:nth-of-type(2) {
+    top: calc(50% - 15px);
+  }
+  .main_menu_hamburger span:nth-of-type(3) {
+    top: calc(50% + 15px);
+  }
+
+  .main_menu_nav{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+}
+
+@media all and (max-width: 650px){
+  #main_img{
+    width: 50%;
+  }
+
+  .skills{
+    margin-top: 690px;
+  }
+
+  .tool_container img{
+    width: 30px;
+  }
+
+  .tool_container{
+    margin: 20px 40px;
+  }
+
+  .project_mockup{
+    width: 90%;
+  }
+
+  .contacts_form{
+    padding: 50px;
+  }
+}
+
+@media all and (max-width: 620px){
+  .skills{
+    margin-top: 790px;
+  }
+}
+
+@media all and (max-width: 610px){
+  .links{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .github_btn, .netlify_btn{
+    font-size: 26px;
+    margin: 20px;
+  }
+  
+  .rus_github_btn, .rus_netlify_btn{
+    font-size: 22px;
+    margin: 18px;
+  }
+
+  .rus_github_btn{
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .github_btn, .netlify_btn, .rus_github_btn, .rus_netlify_btn{
+    margin-left: 0;
+  }
+
+  .netlify_arrow{
+    top: 170px;
+    left: 0;
+  }
+}
+
+@media all and (max-width: 510px){
+  .main_menu_nav{
+    padding: 120px 50px;
+  }
+  
+  .skills{
+    margin-top: 890px;
+  }
+
+  #main_img{
+    width: 60%;
+  }
+
+  .main_text_container{
+    padding: 0 40px;
+  }
+
+  .skills, .projects{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  h2{
+    display: flex;
+    align-self: center;
+  }
+}
+
+@media all and (max-width: 465px){
+  .skills{
+    margin-top: 990px;
+  }
+
+  .project_text_name{
+    font-size: 28px;
+  }
+
+  .project_text_description{
+    font-size: 20px;
+  }
+
+  .main_text{
+    font-size: 20px;
+  }
+
+  .contacts_text p{
+    margin: 22px 30px;
+  }
+
+  .contacts_form{
+    width: 90%;
+    padding: 50px;
+  }
+}
+
+@media all and (max-width: 390px){
+  h1{
+    font-size: 30px;
+  }
+  
+  h2{
+    font-size: 28px;
+  }
+
+  .main_menu_nav{
+    width: 50%;
+  }
+
+  .github_btn, .netlify_btn{
+    font-size: 22px;
+    margin: 20px;
+  }
+  
+  .rus_github_btn, .rus_netlify_btn{
+    font-size: 20px;
+    margin: 18px;
+  }
+
+  .netlify_arrow{
+    width: 200px;
+  }
+
+  .input_field{
+    width: 90%;
+    font-size: 18px;
+  }
+
+  .contacts_form{
+    padding: 50px 20px;
+  }
+
+  .skills, .projects{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .skills{
+    margin-top: 1100px;
+  }
+
+  .background_rectangle_project{
+    width: 95%;
+  }
+
+  .project_text_description{
+    font-size: 18px;
+  }
+
+  li{
+    padding: 0 10px;
+  }
+
+  .contacts_text{
+    font-size: 20px;
+  }
+
+}
+
+@media all and (max-width: 355px){
+
+  .main_menu_nav{
+    width: 54%;
+  }
+}
+
+@media all and (max-width: 340px){
+  h1{
+    font-size: 28px;
+  }
+
+  .skills{
+    margin-top: 1150px;
+  }
+
+  .project_container{
+    width: 300px;
+  }
+
+  .project_text_name{
+    font-size: 24px;
+  }
+
+  .project_text_description{
+    font-size: 16px;
+  }
+
+  .netlify_arrow{
+    width: 190px;
+    top: 160px;
+  }
+
+  .contacts_text p{
+    margin: 22px 10px;
+  }
+  
+  label{
+    font-size: 20px;;
+  }
 }
