--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body{
 }
 
 #particles-js {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 
@@ -187,6 +186,10 @@ h2{
   cursor: pointer;
 }
 
+#game_container{
+  display: none;
+}
+
 .skills, .projects, .contacts{
   display: flex;
   flex-direction: column;
@@ -194,16 +197,16 @@ h2{
 
 .skills, .projects{
   align-items: flex-start;
-  margin: 60px 40px;
+  margin: 40px;
 }
 
-.tool_wrapper, .project_wrapper{
+.tool_wrapper{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  color: #fff;
   font-size: 26px;
   font-family: 'Nunito', sans-serif;
+  color: #fff;
+  justify-content: space-around;
 }
 
 .tool_container{
@@ -349,12 +352,6 @@ h2{
   margin: 0;
 }
 
-@media all and (max-width: 1400px){
-  .skills{
-    margin: 120px 40px 60px 40px;
-  }
-}
-
 @media all and (max-width: 1372px){
   .tool_container{
     margin: 50px 60px;
@@ -362,9 +359,6 @@ h2{
 }
 
 @media all and (max-width: 1290px){
-  .skills{
-    margin: 180px 40px 60px 40px;
-  }
 
   .rus_github_btn, .rus_netlify_btn{
     font-size: 20px;
@@ -380,9 +374,6 @@ h2{
 }
 
 @media all and (max-width: 1240px){
-  .skills{
-    margin: 200px 40px 60px 40px;
-  }
 
   h2{
     font-size: 34px;
@@ -392,12 +383,6 @@ h2{
     font-size: 22px;
   }
 
-}
-
-@media all and (max-width: 1225px){
-  .skills{
-    margin: 290px 40px 60px 40px;
-  }
 }
 
 @media all and (max-width: 1205px){
@@ -509,10 +494,6 @@ h2{
     width: 40%;
   }
 
-  .skills{
-    margin: 590px 40px 60px 40px;
-  }
-
 }
 
 @media all and (max-width: 852px){
@@ -526,6 +507,22 @@ h2{
 }
 
 @media all and (max-width: 820px){
+  #particles-js {
+    height: 150vh;
+  }
+
+  #game_container{
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    position: absolute;
+    top: 1000px;
+  }
+
+  #game_arrow{
+    width: 220px;
+  }
+
   nav{
     display: none;
   }
@@ -571,10 +568,6 @@ h2{
     width: 50%;
   }
 
-  .skills{
-    margin-top: 690px;
-  }
-
   .tool_container img{
     width: 30px;
   }
@@ -592,13 +585,14 @@ h2{
   }
 }
 
-@media all and (max-width: 620px){
-  .skills{
-    margin-top: 790px;
+@media all and (max-width: 650px){
+  #particles-js {
+    height: 200vh;
   }
 }
 
 @media all and (max-width: 610px){
+
   .links{
     flex-direction: column;
     align-items: center;
@@ -630,12 +624,13 @@ h2{
 }
 
 @media all and (max-width: 510px){
+
+  #game_container{
+    top: 1200px;
+  }
+
   .main_menu_nav{
     padding: 120px 50px;
-  }
-  
-  .skills{
-    margin-top: 890px;
   }
 
   #main_img{
@@ -655,11 +650,20 @@ h2{
     display: flex;
     align-self: center;
   }
+
+  .background_rectangle_project{
+    width: 100%;
+  }
 }
 
 @media all and (max-width: 465px){
-  .skills{
-    margin-top: 990px;
+  .projects_wrapper{
+    align-self: center;
+  }
+
+  .project_container{
+    padding: 0;
+    padding-top: 40px;
   }
 
   .project_text_name{
@@ -685,6 +689,10 @@ h2{
 }
 
 @media all and (max-width: 390px){
+  #particles-js {
+    height: 250vh;
+  }
+
   h1{
     font-size: 30px;
   }
@@ -725,12 +733,20 @@ h2{
     margin-right: 10px;
   }
 
-  .skills{
-    margin-top: 1100px;
+  .background_rectangle_project{
+    width: 100%;
   }
 
-  .background_rectangle_project{
-    width: 95%;
+  .projects_wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project_container{
+    width: 344px;
+    padding: 0;
+    padding-top: 40px;
   }
 
   .project_text_description{
@@ -752,15 +768,29 @@ h2{
   .main_menu_nav{
     width: 54%;
   }
+
+  .project_container{
+    width: 336px;
+    padding: 0;
+    padding-top: 40px;
+  }
 }
 
 @media all and (max-width: 340px){
-  h1{
-    font-size: 28px;
+  #particles-js {
+    height: 300vh;
   }
 
-  .skills{
-    margin-top: 1150px;
+  #game_container{
+    top: 1300px;
+  }
+
+  #game_arrow{
+    width: 160px;
+  }
+
+  h1{
+    font-size: 28px;
   }
 
   .project_container{
